@@ -313,6 +313,10 @@ filename.nfo.acceptAllNfo=false
 # Filename will be like: "filename [TRAILER-trailer title].avi"
 filename.extras.keywords=trailer,bonus,extra
 
+# Generate a basic NFO file in the jukebox for each video. 
+# These NFO files are NOT used by YAMJ but can be copied alongside the videos if required.
+filename.nfo.writeFiles=false
+
 ################################################################
 ## Poster scanner
 # specifies if we should look for an existing covert art file
